Commit after fixing delete appointment button flickering and minor edit assessment options issue.

--- a/css/style.css
+++ b/css/style.css
@@ -18101,6 +18101,10 @@ select.event:focus {
     text-decoration: none!important;
     color:brown;
  }
+
+ #appointment_booknow .ng-hide.ng-hide-animate {
+    display: none !important;
+ }
 /*for home page carousal image*/
 
   /* Carousel Styles */
